file(GLOB_RECURSE source_list "*_test.cpp")
foreach(file ${source_list})
  get_filename_component(filename ${file} NAME_WE)
  add_executable(${filename} ${file})
  target_include_directories(${filename} PRIVATE ../include)
  target_link_libraries(${filename} PRIVATE project_warnings)
  target_link_libraries(${filename} PUBLIC CONAN_PKG::boost-ext-ut)
  target_link_libraries(${filename} PRIVATE project_options)
  add_test(NAME ${filename} COMMAND ${filename})
endforeach()
